[package]
name = "cmdprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
regex = "1.5"
rayon = "*"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}
jmespath = "0.3"
anyhow = "1.0"
