[package]
name = "cmdprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logs
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Parsing
jmespath = "0.3"
regex = "1.5"

# Errors
anyhow = "1.0"

# CLI
clap = {version = "4.3", features = ["derive", "env"]}

# Metrics
cadence = "0.29"

# Parallelism
rayon = "1.7"

# HTTP
ureq = "2.7"
