[package]
name = "cmdprobe"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool for executing checks and validating their outputs"
authors = ["Vasilios Syrakis <vsyrakis@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/cetanu/cmdprobe"
keywords = ["check", "healthcheck"]

[dependencies]
# Logs
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Parsing
jmespath = "0.3"
regex = "1.5"

# Errors
anyhow = "1.0"

# CLI
clap = {version = "4.3", features = ["derive", "env"]}

# Metrics
cadence = "0.29"

# Parallelism
rayon = "1.7"

# HTTP
ureq = "2.7"
